# tiny-evm

./: .gitignore  .hspec  .hspec-failures  CHANGELOG.md  LICENSE  Makefile  Makefile-nix  README.md  project.nix  tiny-evm.cabal
src/: TinyEVM.hs
src/Control/Monad/Throw/: Extra.hs
src/Data/: Word256.hs
src/Data/ByteString/Base16/: Extra.hs
src/Data/List/: Extra.hs
src/Data/Ord/: Extra.hs
src/Data/Vector/Unboxed/Mutable/: Extra.hs
src/Sandbox/: Exception1.hs  Mixed.hs  Mixed2.hs  TH1.hs  TH2.hs  TH3.hs  TH4.hs  TH5.hs  TH6.hs  VM1.hs  VM2.hs  VM3.hs
src/Text/Show/: Extra.hs
src/TinyEVM/: Env.hs  VM.hs
src/TinyEVM/VM/: Code.hs  Exception.hs  Gas.hs  Instruction.hs  Memory.hs  Program.hs  Stack.hs  State.hs  Storage.hs
src/TinyEVM/VM/Gas/: CostGroup.hs
src/TinyEVM/VM/Instruction/: DSL.hs  Metadata.hs  Opcode.hs  Operation.hs  TH.hs
test/: Driver.hs  Spec.hs  VMSpec.hs
test/Data/: Example.hs  Word256Spec.hs
test/Data/List/: ExtraSpec.hs
test/VM/: CodeSpec.hs  InstructionSpec.hs  MemorySpec.hs  StackSpec.hs  StorageSpec.hs
test/VM/Instruction/: OpcodeSpec.hs  OperationSpec.hs
